@@ -1,5 +1,5 @@
 The dbttools package is required for post-processing test data.  This
-version of the kit has been proofed against dbttools-v0.4.0.
+version of the kit has been proofed against dbttools-v0.4.1.
 
 Please refer to the documentation under the `doc/` directory for detailed
 instructions on how to use this package.
