@@ -1,0 +1,80 @@
+#!/bin/sh
+#
+# This file is released under the terms of the Artistic License.
+# Please see the file LICENSE, included in this package, for details.
+#
+# Copyright The DBT-2 Authors
+#
+
+# Display the version of the kit and any other tools that may be used.
+
+usage()
+{
+	echo "$(basename "$0") is the DBT-2 version reporter"
+	echo ""
+	echo "Usage:"
+	echo "  $(basename "$0") [OPTIONS]"
+	echo
+	echo "Options:"
+	echo "  -v, --verbose    display additional versions of other potentially"
+	echo "                   used software that DBT-2 may use"
+	echo "  -?, --help       show this help, then exit"
+}
+
+display_version()
+{
+	NAME=$1
+	FLAG=$2
+	if ! which "${NAME}" > /dev/null 2>&1; then
+		echo "$NAME not found"
+		return
+	fi
+	CMD="$(which "${NAME}") ${FLAG}"
+	echo ""
+	echo "${CMD}"
+	eval "${CMD}"
+}
+
+VERBOSE=0
+# Custom argument handling for hopefully most portability.
+while [ "${#}" -gt 0 ] ; do
+	case "${1}" in
+	(-v | --verbose)
+		VERBOSE=1
+		;;
+	(-\? | --help)
+		usage
+		exit 0
+		;;
+	(--* | -*)
+		echo "$(basename "${0}"): invalid option -- '${1}'"
+		echo "try \"$(basename "${0}") --help\" for more information."
+		exit 1
+		;;
+	(*)
+		break
+		;;
+	esac
+	shift
+done
+
+echo "dbt2 (Database Test 2) v@PROJECT_VERSION@"
+display_version dbt-version
+
+if [ $VERBOSE -eq 0 ]; then
+	exit 0
+fi
+
+display_version julia --version
+display_version pandoc --version
+display_version perl --version
+display_version psql --version
+display_version python --version
+display_version R --version
+RST2HTML5="rst2html5.py"
+if ! which "${NAME}" > /dev/null 2>&1; then
+	RST2HTML5="rst2html5"
+fi
+display_version $RST2HTML5 --version
+display_version sar -V
+display_version sqlite3 --version
